--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Qyoom
 
 # Short bio or description (displayed in the header)
-description: Keep learning.
+description: Thinking in Models
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars0.githubusercontent.com/u/1784866?v=3&s=140
@@ -18,15 +18,15 @@ avatar: https://avatars0.githubusercontent.com/u/1784866?v=3&s=140
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: richard@qyoom.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: Qyoom/qyoom.github.io
   instagram:
-  linkedin:
+  linkedin: richardwalker1
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: richardlwalker
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
