--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Qyoom
+name: Thinking in Models
 
 # Short bio or description (displayed in the header)
-description: Thinking in Models
+description: Explorations in code, dynamic visualization, and writing
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars0.githubusercontent.com/u/1784866?v=3&s=140
+avatar: https://avatars2.githubusercontent.com/u/1784866?v=3&u=8a60e138c14358bb636090da79c0f8854bd6435c&s=140
 
 #
 # Flags below are optional
